<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView1"
                app:layout_constraintEnd_toEndOf="@+id/editTextFarmerName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFarmerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/editTextFarmerName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView2"
                app:layout_constraintEnd_toEndOf="@id/editTextFarmerName"
                app:layout_constraintTop_toBottomOf="@id/editTextFarmerName"/>

            <EditText
                android:id="@+id/editTextFactoryRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/editTextFactoryRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView3"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/editTextFactoryRate"
                app:layout_constraintTop_toBottomOf="@id/editTextFactoryRate" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView4"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@id/editTextFactoryRate"
                app:layout_constraintTop_toBottomOf="@id/editTextFactoryRate"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:id="@+id/dateWeightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFactoryRate">

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/editTextDate"
                    android:inputType="date"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextTroliWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/editTextTroliWeight"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView5"
                app:layout_constraintEnd_toEndOf="@id/editTextLabourName"
                app:layout_constraintTop_toBottomOf="@id/dateWeightLayout"/>

            <EditText
                android:id="@+id/editTextLabourName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/editTextLabourName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView6"
                app:layout_constraintEnd_toEndOf="@id/editTextLabourRate"
                app:layout_constraintTop_toBottomOf="@id/editTextLabourName"/>

            <EditText
                android:id="@+id/editTextLabourRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/editTextLabourRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView7"
                app:layout_constraintEnd_toEndOf="@id/editTextVehicleName"
                app:layout_constraintTop_toBottomOf="@id/editTextLabourRate"/>

            <EditText
                android:id="@+id/editTextVehicleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/editTextVehicleName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView8"
                app:layout_constraintEnd_toEndOf="@id/editTextDriverName"
                app:layout_constraintTop_toBottomOf="@id/editTextVehicleName"/>

            <EditText
                android:id="@+id/editTextDriverName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/editTextDriverName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textView9"
                app:layout_constraintEnd_toEndOf="@id/editTextVehicleRate"
                app:layout_constraintTop_toBottomOf="@id/editTextDriverName"/>

            <EditText
                android:id="@+id/editTextVehicleRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/editTextVehicleRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView9" />

            <Button
                android:id="@+id/buttonSaveData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextVehicleRate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>